# graph-v3

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EDGE_VALUE_METHOD_SUMMARY.md  README.md
benchmark/: CMakeLists.txt  README.md  benchmark_vertex_access.cpp  benchmark_views.cpp
benchmark/algorithms/: CMakeLists.txt  README.md  benchmark_dijkstra.cpp  bgl_dijkstra_fixtures.hpp  dijkstra_fixtures.hpp
benchmark/data/: README.md
cmake/: CPM.cmake  (+3 more)
examples/: CMakeLists.txt  basic_usage.cpp  bgl_adaptor_example.cpp  dijkstra_clrs.hpp  dijkstra_clrs_example.cpp  mst_usage_example.cpp
examples/AdaptingThirdPartyGraph/: adapting_a_third_party_graph.cpp
examples/BGLWorkshop2026/: CMakeLists.txt  bacon.cpp  bacon_bgl.cpp  bacon_gv3.cpp  bglws_outline.md  bglws_outline.txt  france_cities_orig.dot  france_routes.cpp  france_routes_bgl.cpp  france_routes_gv3.cpp
examples/BGLWorkshop2026/graphs/: france_routes.json  imdb-graph.hpp
examples/CppCon2021/: CMakeLists.txt
examples/CppCon2021/examples/: bacon.cpp  graphs.cpp  imdb.cpp  ospf.cpp
examples/CppCon2021/include/: utilities.hpp
examples/CppCon2022/: CMakeLists.txt  germany_routes_example.cpp  graphviz_output.hpp  rr_adaptor.hpp
examples/PageRank/: CMakeLists.txt
tests/: CMakeLists.txt  fix_test.py  test_adjacency_list_edge_concepts.cpp  test_adjacency_list_traits.cpp  test_adjacency_list_vertex_concepts.cpp  test_compressed_graph.cpp  test_compressed_graph_cpo.cpp  test_contains_edge_cpo.cpp  test_degree_cpo.cpp  test_descriptor_traits.cpp  test_dynamic_edge_comparison.cpp  test_dynamic_graph_common.cpp  test_dynamic_graph_conversions.cpp  test_dynamic_graph_cpo_dod.cpp  test_dynamic_graph_cpo_dofl.cpp  test_dynamic_graph_cpo_dol.cpp  test_dynamic_graph_cpo_dos.cpp  test_dynamic_graph_cpo_dous.cpp  test_dynamic_graph_cpo_dov.cpp  test_dynamic_graph_cpo_mod.cpp  test_dynamic_graph_cpo_moem.cpp  test_dynamic_graph_cpo_mofl.cpp  test_dynamic_graph_cpo_mol.cpp  test_dynamic_graph_cpo_mos.cpp  test_dynamic_graph_cpo_mous.cpp  test_dynamic_graph_cpo_mov.cpp  test_dynamic_graph_cpo_uod.cpp  test_dynamic_graph_cpo_uofl.cpp  test_dynamic_graph_cpo_uol.cpp  test_dynamic_graph_cpo_uos.cpp  test_dynamic_graph_cpo_uous.cpp  test_dynamic_graph_cpo_uov.cpp  test_dynamic_graph_cpo_vod.cpp  test_dynamic_graph_cpo_voem.cpp  test_dynamic_graph_cpo_vofl.cpp  test_dynamic_graph_cpo_vol.cpp  test_dynamic_graph_cpo_vos.cpp  test_dynamic_graph_cpo_vous.cpp  test_dynamic_graph_cpo_vov.cpp  test_dynamic_graph_dous.cpp  (+52 more)
tests/adaptors/: CMakeLists.txt  test_bgl_bidirectional.cpp  test_bgl_concepts.cpp  test_bgl_cpo.cpp  test_bgl_csr.cpp  test_bgl_dijkstra.cpp  test_bgl_edge_iterator.cpp  test_bgl_non_vecs.cpp  test_bgl_property_bridge.cpp  test_bgl_views.cpp  test_filtered_graph.cpp
tests/adj_list/: CMakeLists.txt  test_mapped_concepts.cpp  test_vertex_map.cpp  test_vertex_property_map.cpp
tests/adj_list/concepts/: test_adjacency_list_edge_concepts.cpp  test_adjacency_list_vertex_concepts.cpp  test_bidirectional_concepts.cpp  test_edge_concepts.cpp  test_vertex_concepts.cpp
tests/adj_list/cpo/: test_bidir_cpo_consistency.cpp  test_contains_edge_cpo.cpp  test_contains_in_edge_cpo.cpp  test_degree_cpo.cpp  test_edge_value_cpo.cpp  test_edge_value_cpo_value_method.cpp  test_edges_cpo.cpp  test_edges_uid_cpo.cpp  test_find_in_edge_cpo.cpp  test_find_vertex_cpo.cpp  test_find_vertex_edge_cpo.cpp  test_graph_value_cpo.cpp  test_has_edge_cpo.cpp  test_has_edges_cpo.cpp  test_in_edges_cpo.cpp  test_num_edges_cpo.cpp  test_num_partitions_cpo.cpp  test_num_vertices_cpo.cpp  test_num_vertices_pid_cpo.cpp  test_partition_id_cpo.cpp  test_source_cpo.cpp  test_source_id_cpo.cpp  test_target_cpo.cpp  test_target_id_cpo.cpp  test_vertex_id_cpo.cpp  test_vertex_value_cpo.cpp  test_vertices_cpo.cpp  test_vertices_pid_cpo.cpp
tests/adj_list/descriptors/: test_descriptor_traits.cpp  test_edge_descriptor.cpp  test_vertex_descriptor.cpp
tests/adj_list/traits/: test_adjacency_list_traits.cpp  test_incoming_edge_traits.cpp  test_type_aliases.cpp
tests/algorithms/: CMakeLists.txt  README.md  test_articulation_points.cpp  test_bellman_ford_shortest_paths.cpp  test_biconnected_components.cpp  test_breadth_first_search.cpp  test_connected_components.cpp  test_depth_first_search.cpp  test_dijkstra.cpp  test_dijkstra_indexed_heap.cpp  test_dijkstra_shortest_paths.cpp  test_indexed_dary_heap.cpp  test_jaccard.cpp  test_label_propagation.cpp  test_mis.cpp  test_mst.cpp  test_scc_bidirectional.cpp  test_tarjan_scc.cpp  test_topological_sort.cpp  test_triangle_count.cpp  test_visitor_factory.cpp
tests/common/: algorithm_test_types.hpp  graph_fixtures.hpp  graph_test_types.hpp  map_graph_fixtures.hpp  map_graph_test_data.hpp
tests/container/: CMakeLists.txt
tests/container/adjacency_matrix/: test_adjacency_matrix.cpp
tests/container/compressed_graph/: test_compressed_graph.cpp  test_compressed_graph_cpo.cpp
tests/container/dynamic_graph/: test_dynamic_edge_comparison.cpp  test_dynamic_graph_bidirectional.cpp  test_dynamic_graph_common.cpp  test_dynamic_graph_conversions.cpp  (+66 more)
tests/edge_list/: CMakeLists.txt  test_edge_list_concepts.cpp  test_edge_list_cpo.cpp  test_edge_list_descriptor.cpp  test_edge_list_integration.cpp
tests/generators/: CMakeLists.txt  test_generators.cpp
tests/io/: CMakeLists.txt  test_io.cpp
tests/views/: CMakeLists.txt  test_adaptors.cpp  test_basic_edgelist.cpp  test_basic_incidence.cpp  test_basic_neighbors.cpp  test_basic_vertexlist.cpp  test_basic_views.cpp  test_bfs.cpp  test_dfs.cpp  test_edge_cases.cpp  test_edge_data.cpp  test_edge_info.cpp  test_edgelist.cpp  test_graph_hpp_includes_views.cpp  test_in_incidence.cpp  test_in_neighbors.cpp  test_incidence.cpp  test_main.cpp  test_neighbor_data.cpp  test_neighbor_info.cpp  test_neighbors.cpp  test_reverse_traversal.cpp  test_search_base.cpp  test_topological_sort.cpp  test_transpose.cpp  test_unified_header.cpp  test_vertex_data.cpp  test_vertex_info.cpp  test_vertexlist.cpp  test_view_chaining.cpp  test_view_concepts.cpp
(+314 files in other folders)
